# mighty-metropolis

./: .gitignore  CHANGELOG  LICENSE  README.md  mighty-metropolis.cabal  stack-travis.yaml  stack.yaml
Examples/code/: Rosenbrock_MH.hs
Numeric/MCMC/: Metropolis.hs
test/: BNN.hs  Rosenbrock.hs  Spec.hs
test/test/: Spec.hs
