name:                mighty-metropolis
version:             0.2.0.0
synopsis:            The Metropolis algorithm.
homepage:            http://github.com/jtobin/mighty-metropolis
license:             MIT
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.ca
category:            Numeric
build-type:          Simple
cabal-version:       >= 1.18
description:
  The Metropolis algorithm.

Source-repository head
  Type:     git
  Location: http://github.com/jtobin/mighty-metropolis.git

library
  ghc-options:
      -Wall
  exposed-modules:
      Numeric.MCMC.Metropolis
  build-depends:
      base
    , pipes
    , primitive
    , mwc-probability
    , vector

Test-suite rosenbrock
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Rosenbrock.hs
  default-language:    Haskell2010
  ghc-options:
    -rtsopts -Wall
  build-depends:
      base
    , mwc-probability
    , vector

